--- a/share/gpodder/ui/gtk/gpodderepisodeselector.ui
+++ b/share/gpodder/ui/gtk/gpodderepisodeselector.ui
@@ -53,10 +53,11 @@
                   <object class="GtkTreeView" id="treeviewEpisodes">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="has_focus">True</property>
                     <property name="headers_visible">False</property>
                     <property name="rules_hint">False</property>
                     <property name="reorderable">False</property>
-                    <property name="enable_search">True</property>
+                    <property name="enable_search">False</property>
                     <property name="fixed_height_mode">False</property>
                     <property name="hover_selection">False</property>
                     <property name="hover_expand">False</property>
@@ -272,7 +273,6 @@
                 <property name="can_default">True</property>
                 <property name="has_default">True</property>
                 <property name="can_focus">True</property>
-                <property name="has_focus">True</property>
                 <property name="label">gtk-ok</property>
                 <property name="use_stock">True</property>
                 <property name="focus_on_click">True</property>
