Gtk UI: Add support for GtkHeaderBar / GNOME3 CSDs

--- a/share/gpodder/ui/gtk/gpodder.ui
+++ b/share/gpodder/ui/gtk/gpodder.ui
@@ -218,6 +218,7 @@
                           <object class="GtkGrid" id="vbox42">
                             <property name="visible">True</property>
                             <property name="orientation">vertical</property>
+                            <property name="hexpand">True</property>
                             <child>
                               <object class="GtkButton" id="btnUpdateFeeds">
                                 <property name="label" translatable="yes">Check for new episodes</property>
