--- a/share/gpodder/ui/hdy/menus.ui
+++ b/share/gpodder/ui/hdy/menus.ui
@@ -7,15 +7,20 @@
         <attribute name="label" translatable="yes">Preferences</attribute>
         <attribute name="accel">&lt;Primary&gt;p</attribute>
       </item>
-    </section>
-    <section>
       <item>
         <attribute name="action">app.gotoMygpo</attribute>
         <attribute name="label" translatable="yes">Go to gpodder.net</attribute>
       </item>
+    </section>
+    <section>
       <item>
-        <attribute name="action">app.checkForUpdates</attribute>
-        <attribute name="label" translatable="yes">Software updates</attribute>
+        <attribute name="action">win.sync</attribute>
+        <attribute name="label" translatable="yes">Sync to device</attribute>
+        <attribute name="accel">&lt;Primary&gt;s</attribute>
+      </item>
+      <item>
+        <attribute name="action">win.showProgress</attribute>
+        <attribute name="label" translatable="yes">Show transfers</attribute>
       </item>
     </section>
     <section>
@@ -211,31 +216,78 @@
       </submenu>
     </submenu>
   </menu>
+  <menu id="plus-menu">
+    <section>
+      <item>
+        <attribute name="action">win.addChannel</attribute>
+        <attribute name="label" translatable="yes">Add podcast via URL</attribute>
+        <attribute name="accel">&lt;Primary&gt;l</attribute>
+      </item>
+      <item>
+        <attribute name="action">win.discover</attribute>
+        <attribute name="label" translatable="yes">Discover new podcasts</attribute>
+      </item>
+      <item>
+        <attribute name="action">win.massUnsubscribe</attribute>
+        <attribute name="label" translatable="yes">Delete podcasts</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
+        <attribute name="action">win.downloadAllNew</attribute>
+        <attribute name="label" translatable="yes">Download new episodes</attribute>
+        <attribute name="accel">&lt;Primary&gt;n</attribute>
+      </item>
+      <item>
+        <attribute name="action">win.removeOldEpisodes</attribute>
+        <attribute name="label" translatable="yes">Delete episodes</attribute>
+        <attribute name="accel">&lt;Primary&gt;k</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
+        <attribute name="action">win.importFromFile</attribute>
+        <attribute name="label" translatable="yes">Import from OPML file</attribute>
+      </item>
+      <item>
+        <attribute name="action">win.exportChannels</attribute>
+        <attribute name="label" translatable="yes">Export to OPML file</attribute>
+      </item>
+    </section>
+  </menu>
   <menu id="view-menu">
-    <item>
-      <attribute name="action">win.viewEpisodes</attribute>
-      <attribute name="label" translatable="yes">All episodes</attribute>
-      <attribute name="target">VIEW_ALL</attribute>
-      <attribute name="accel">&lt;Primary&gt;0</attribute>
-    </item>
-    <item>
-      <attribute name="action">win.viewEpisodes</attribute>
-      <attribute name="label" translatable="yes">Hide deleted episodes</attribute>
-      <attribute name="target">VIEW_UNDELETED</attribute>
-      <attribute name="accel">&lt;Primary&gt;1</attribute>
-    </item>
-    <item>
-      <attribute name="action">win.viewEpisodes</attribute>
-      <attribute name="label" translatable="yes">Downloaded episodes</attribute>
-      <attribute name="target">VIEW_DOWNLOADED</attribute>
-      <attribute name="accel">&lt;Primary&gt;2</attribute>
-    </item>
-    <item>
-      <attribute name="action">win.viewEpisodes</attribute>
-      <attribute name="label" translatable="yes">Unplayed episodes</attribute>
-      <attribute name="target">VIEW_UNPLAYED</attribute>
-      <attribute name="accel">&lt;Primary&gt;3</attribute>
-    </item>
+    <section>
+      <item>
+        <attribute name="action">win.viewEpisodes</attribute>
+        <attribute name="label" translatable="yes">All episodes</attribute>
+        <attribute name="target">VIEW_ALL</attribute>
+        <attribute name="accel">&lt;Primary&gt;0</attribute>
+      </item>
+      <item>
+        <attribute name="action">win.viewEpisodes</attribute>
+        <attribute name="label" translatable="yes">Hide deleted episodes</attribute>
+        <attribute name="target">VIEW_UNDELETED</attribute>
+        <attribute name="accel">&lt;Primary&gt;1</attribute>
+      </item>
+      <item>
+        <attribute name="action">win.viewEpisodes</attribute>
+        <attribute name="label" translatable="yes">Downloaded episodes</attribute>
+        <attribute name="target">VIEW_DOWNLOADED</attribute>
+        <attribute name="accel">&lt;Primary&gt;2</attribute>
+      </item>
+      <item>
+        <attribute name="action">win.viewEpisodes</attribute>
+        <attribute name="label" translatable="yes">Unplayed episodes</attribute>
+        <attribute name="target">VIEW_UNPLAYED</attribute>
+        <attribute name="accel">&lt;Primary&gt;3</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
+        <attribute name="action">win.showProgress</attribute>
+        <attribute name="label" translatable="yes">Show transfers</attribute>
+      </item>
+    </section>
   </menu>
   <menu id="sort-menu">
     <item>
