Add 'Always show New episodes' toggle to View menu
Adds a new boolean config item ui.gtk.episode_list.always_show_new,
which can be toggled from menu with View->Always show New episodes.

If set, the Downloaded episodes view also shows new episodes.

--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -205,6 +205,10 @@
           <attribute name="action">win.viewHideBoringPodcasts</attribute>
           <attribute name="label" translatable="yes">Hide podcasts without episodes</attribute>
         </item>
+        <item>
+          <attribute name="action">win.viewAlwaysShowNewEpisodes</attribute>
+          <attribute name="label" translatable="yes">Always show New Episodes</attribute>
+        </item>
       </section>
       <submenu id="menuViewColumns">
         <attribute name="label" translatable="yes">Visible columns</attribute>
