--- a/share/gpodder/ui/hdy/gpodder.ui
+++ b/share/gpodder/ui/hdy/gpodder.ui
@@ -58,6 +58,37 @@
               </packing>
             </child>
             <child>
+              <object class="HdySearchBar" id="channels_search_bar">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <child>
+                  <object class="HdyClamp">
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="maximum-size">400</property>
+                    <property name="tightening-threshold">200</property>
+                    <child>
+                      <object class="GtkEntry" id="entry_search_channels">
+                        <property name="visible">True</property>
+                        <property name="can-focus">True</property>
+                        <property name="shadow-type">none</property>
+                        <property name="secondary-icon-name">edit-delete-symbolic</property>
+                        <property name="primary-icon-activatable">False</property>
+                        <property name="primary-icon-sensitive">False</property>
+                        <property name="placeholder-text" translatable="yes">Search channels</property>
+                        <signal name="icon-release" handler="on_entry_search_icon_release" swapped="no"/>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkScrolledWindow">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
@@ -89,7 +120,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
             <child>
@@ -144,7 +175,7 @@
                 <property name="expand">False</property>
                 <property name="fill">True</property>
                 <property name="pack-type">end</property>
-                <property name="position">2</property>
+                <property name="position">3</property>
               </packing>
             </child>
           </object>
@@ -242,6 +273,25 @@
                                 <property name="position">2</property>
                               </packing>
                             </child>
+                            <child>
+                              <object class="GtkToggleButton" id="episode_search_toggle">
+                                <property name="visible">True</property>
+                                <property name="can-focus">True</property>
+                                <property name="receives-default">True</property>
+                                <child>
+                                  <object class="GtkImage">
+                                    <property name="visible">True</property>
+                                    <property name="can-focus">False</property>
+                                    <property name="icon-name">system-search-symbolic</property>
+                                  </object>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">3</property>
+                              </packing>
+                            </child>
                           </object>
                         </child>
                         <child>
@@ -276,7 +326,6 @@
                           </object>
                           <packing>
                             <property name="pack-type">end</property>
-                            <property name="position">0</property>
                           </packing>
                         </child>
                       </object>
@@ -284,6 +333,37 @@
                         <property name="expand">False</property>
                         <property name="fill">True</property>
                         <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="HdySearchBar" id="episodes_search_bar">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <child>
+                          <object class="HdyClamp">
+                            <property name="visible">True</property>
+                            <property name="can-focus">False</property>
+                            <property name="maximum-size">400</property>
+                            <property name="tightening-threshold">200</property>
+                            <child>
+                              <object class="GtkEntry" id="entry_search_episodes">
+                                <property name="visible">True</property>
+                                <property name="can-focus">True</property>
+                                <property name="shadow-type">none</property>
+                                <property name="secondary-icon-name">edit-delete-symbolic</property>
+                                <property name="primary-icon-activatable">False</property>
+                                <property name="primary-icon-sensitive">False</property>
+                                <property name="placeholder-text" translatable="yes">Search episodes</property>
+                                <signal name="icon-release" handler="on_entry_search_icon_release" swapped="no"/>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
                       </packing>
                     </child>
                     <child>
@@ -299,6 +379,7 @@
                                 <property name="has-tooltip">True</property>
                             <property name="vexpand">False</property>
                             <property name="headers-visible">False</property>
+                            <property name="enable-search">False</property>
                             <property name="activate-on-single-click">True</property>
                             <signal name="button-press-event" handler="on_treeview_button_pressed" swapped="no"/>
                             <signal name="button-release-event" handler="on_treeview_episodes_button_released" swapped="no"/>
@@ -314,7 +395,7 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">True</property>
-                        <property name="position">1</property>
+                        <property name="position">2</property>
                       </packing>
                     </child>
                   </object>
